avidemux: use same fourcc to determine caps in determining uncompressed-ness

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=673898

Conflicts:

	gst/avi/gstavidemux.c